Crowdin: Merge updated translations
Thanks for all the translators that contributed to the project!

--- a/app/src/main/res/values-ja-rJP/strings.xml
+++ b/app/src/main/res/values-ja-rJP/strings.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Gallery</string>
-    <string name="nav_albums">Albums</string>
-    <string name="searchbar_title"><![CDATA[Search photos & videos]]></string>
-    <string name="header_today">Today</string>
-    <string name="header_yesterday">Yesterday</string>
-    <string name="share_media">Share</string>
-    <string name="request_permissions">Request permissions</string>
-    <string name="filter">Filter</string>
-    <string name="filter_recent">Recent</string>
-    <string name="filter_nameAZ">Name (A-Z)</string>
-    <string name="filter_nameZA">Name (Z-A)</string>
-    <string name="filter_old">Old</string>
-    <string name="selected_s">Selected %s</string>
-    <string name="trash">Trash</string>
-    <string name="pause_video">Pause video</string>
-    <string name="play_video">Play video</string>
-    <string name="favorites">Favorites</string>
-    <string name="no_media_title">Seems empty here</string>
-    <string name="no_media_cd">No media found</string>
+    <string name="app_name">ギャラリー</string>
+    <string name="nav_albums">アルバム</string>
+    <string name="searchbar_title"><![CDATA[写真と動画を検索]]></string>
+    <string name="header_today">今日</string>
+    <string name="header_yesterday">昨日</string>
+    <string name="share_media">共有</string>
+    <string name="request_permissions">リクエストを許可</string>
+    <string name="filter">フィルター</string>
+    <string name="filter_recent">最近</string>
+    <string name="filter_nameAZ">名前順（AからZ）</string>
+    <string name="filter_nameZA">名前順（ZからA）</string>
+    <string name="filter_old">昔</string>
+    <string name="selected_s">選択済み %s</string>
+    <string name="trash">トラッシュ</string>
+    <string name="pause_video">動画を一時停止する</string>
+    <string name="play_video">プレイ動画</string>
+    <string name="favorites">お気に入り</string>
+    <string name="no_media_title">ここは空いています</string>
+    <string name="no_media_cd">メディアは見つかりませんでした</string>
     <string name="empty_trash_title">Squeaky Clean</string>
     <string name="empty_trash_cd">Trash is empty</string>
     <string name="error_title">Something went wrong :(</string>
@@ -72,6 +72,31 @@
     <string name="settings_cached_screen_title">Cached screen count</string>
     <string name="settings_cached_screen_summary">How many screens of media are stored in the memory</string>
     <string name="settings_disk_cache_summary">How much storage space can be used for persistent caching</string>
+    <string name="use_as">Use as</string>
+    <string name="set_as">"Set as: "</string>
+    <string name="delete_dialog_title">You\'re about to delete %s items</string>
+    <string name="delete_dialog_title_confirmation">Deleting %s items..</string>
+    <string name="action_cancel">Cancel</string>
+    <string name="action_confirm">Confirm</string>
+    <string name="action_confirmed">Confirmed</string>
+    <string name="restore_dialog_title">You\'re about to restore %s items</string>
+    <string name="restore_dialog_title_confirmation">Restoring %s items…</string>
+    <string name="trash_dialog_title">You\'re about to trash %s items</string>
+    <string name="trash_dialog_title_confirmation">Moving to trash %s items…</string>
+    <string name="history_delete">Delete item</string>
+    <string name="history_recent_title">Recent</string>
+    <string name="history_suggestions_title">Suggestions</string>
+    <string name="no_media_found">No media found</string>
+    <string name="image_add_description">Add a description</string>
+    <string name="edit_cd">edit</string>
+    <string name="edit_location_cd">Edit location</string>
+    <string name="add_location_cd">Add location</string>
+    <string name="settings_theme_header">Theme</string>
+    <string name="settings_follow_system_theme_title">Follow System Theme</string>
+    <string name="settings_dark_mode_title">Use Dark Mode</string>
+    <string name="selection_dialog_close_cd">Close selection dialog</string>
+    <string name="edit">Edit</string>
+    <string name="trash_deletion_warning">Photos and videos you delete will be removed after 30 days.</string>
     <plurals name="item_count">
         <item quantity="other">%s items</item>
     </plurals>
