--- a/app/src/main/res/values-ko-rKR/strings.xml
+++ b/app/src/main/res/values-ko-rKR/strings.xml
@@ -1,78 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Gallery</string>
-    <string name="nav_albums">Albums</string>
-    <string name="searchbar_title"><![CDATA[Search photos & videos]]></string>
-    <string name="header_today">Today</string>
-    <string name="header_yesterday">Yesterday</string>
-    <string name="share_media">Share</string>
-    <string name="request_permissions">Request permissions</string>
-    <string name="filter">Filter</string>
-    <string name="filter_recent">Recent</string>
-    <string name="filter_nameAZ">Name (A-Z)</string>
-    <string name="filter_nameZA">Name (Z-A)</string>
-    <string name="filter_old">Old</string>
-    <string name="selected_s">Selected %s</string>
-    <string name="trash">Trash</string>
-    <string name="pause_video">Pause video</string>
-    <string name="play_video">Play video</string>
-    <string name="favorites">Favorites</string>
-    <string name="no_media_title">Seems empty here</string>
-    <string name="no_media_cd">No media found</string>
-    <string name="empty_trash_title">Squeaky Clean</string>
-    <string name="empty_trash_cd">Trash is empty</string>
-    <string name="error_title">Something went wrong :(</string>
-    <string name="error_cd">An error occurred</string>
-    <string name="copy_error">Copy error</string>
-    <string name="trash_restore">Restore</string>
-    <string name="trash_empty">Empty</string>
-    <string name="trash_delete">Delete</string>
-    <string name="share">Share</string>
-    <string name="info">Info</string>
-    <string name="remove_selected">Remove selected</string>
-    <string name="remove_all">Remove all</string>
-    <string name="empty_favorites_title">You have no favorites</string>
-    <string name="label">Label</string>
-    <string name="path">Path</string>
-    <string name="date">Date</string>
+    <string name="app_name">갤러리</string>
+    <string name="nav_albums">앨범</string>
+    <string name="searchbar_title"><![CDATA[사진 및 동영상 검색]]></string>
+    <string name="header_today">오늘</string>
+    <string name="header_yesterday">어제</string>
+    <string name="share_media">공유</string>
+    <string name="request_permissions">권한 요청</string>
+    <string name="filter">필터</string>
+    <string name="filter_recent">최신순</string>
+    <string name="filter_nameAZ">이름 (A-Z)</string>
+    <string name="filter_nameZA">이름 (Z-A)</string>
+    <string name="filter_old">오래된순</string>
+    <string name="selected_s">%s개 선택됨</string>
+    <string name="trash">휴지통</string>
+    <string name="pause_video">동영상 일시 정지</string>
+    <string name="play_video">동영상 재생</string>
+    <string name="favorites">즐겨찾기</string>
+    <string name="no_media_title">미디어가 없습니다</string>
+    <string name="no_media_cd">미디어를 찾을 수 없습니다</string>
+    <string name="empty_trash_title">휴지통이 비어 있습니다</string>
+    <string name="empty_trash_cd">휴지통이 비어 있습니다</string>
+    <string name="error_title">뭔가 잘못되었습니다 :(</string>
+    <string name="error_cd">오류가 발생했습니다</string>
+    <string name="copy_error">복사 오류</string>
+    <string name="trash_restore">복원</string>
+    <string name="trash_empty">비우기</string>
+    <string name="trash_delete">삭제</string>
+    <string name="share">공유</string>
+    <string name="info">정보</string>
+    <string name="remove_selected">선택한 항목 제거</string>
+    <string name="remove_all">모두 제거</string>
+    <string name="empty_favorites_title">즐겨찾기가 없습니다</string>
+    <string name="label">이름</string>
+    <string name="path">경로</string>
+    <string name="date">날짜</string>
     <string name="iso">" • ISO"</string>
     <string name="kb">KB</string>
     <string name="mb">MB</string>
     <string name="gb">GB</string>
-    <string name="metadata">Metadata</string>
-    <string name="select_all">Select all</string>
-    <string name="unselect_all">Unselect all</string>
-    <string name="drop_down_cd">Drop down</string>
-    <string name="back_cd">Back</string>
-    <string name="settings_title">Settings</string>
-    <string name="reset_settings">Reset Settings</string>
-    <string name="settings_general">General</string>
-    <string name="settings_trash_title">Use trash can</string>
-    <string name="settings_trash_summary">Store deleted media for 30 days.\nDeleting media will result in a permanent loss if disabled.</string>
-    <string name="settings_about_app_title">About Gallery</string>
-    <string name="settings_about_app_summary">Version %s</string>
-    <string name="move_album_to_trash">Move album to trash</string>
-    <string name="pinned_albums_title">Pinned Albums</string>
-    <string name="unpin">Unpin</string>
-    <string name="pin">Pin</string>
-    <string name="nav_timeline">Timeline</string>
-    <string name="location">Location</string>
-    <string name="location_cd">Media Location</string>
-    <string name="location_map_cd">Location Map</string>
+    <string name="metadata">메타데이터</string>
+    <string name="select_all">모두 선택</string>
+    <string name="unselect_all">모두 선택 취소</string>
+    <string name="drop_down_cd">드롭다운</string>
+    <string name="back_cd">뒤로</string>
+    <string name="settings_title">설정</string>
+    <string name="reset_settings">설정 초기화</string>
+    <string name="settings_general">일반</string>
+    <string name="settings_trash_title">휴지통 사용</string>
+    <string name="settings_trash_summary">삭제된 미디어를 30일 동안 보관합니다.\n비활성화할 경우 미디어를 삭제하면 파일이 영구적으로 제거됩니다.</string>
+    <string name="settings_about_app_title">갤러리 정보</string>
+    <string name="settings_about_app_summary">버전 %s</string>
+    <string name="move_album_to_trash">앨범을 휴지통으로 이동</string>
+    <string name="pinned_albums_title">고정된 앨범</string>
+    <string name="unpin">고정 해제</string>
+    <string name="pin">고정</string>
+    <string name="nav_timeline">타임라인</string>
+    <string name="location">위치</string>
+    <string name="location_cd">미디어 위치</string>
+    <string name="location_map_cd">위치 지도</string>
     <string name="app_dev">by %s</string>
     <string name="app_dev_name">IacobIonut01</string>
-    <string name="donate">Donate</string>
+    <string name="donate">기부하기</string>
     <string name="github">Github</string>
-    <string name="donate_button_cd">Donate Button</string>
-    <string name="github_button_cd">Github Button</string>
+    <string name="donate_button_cd">기부 버튼</string>
+    <string name="github_button_cd">Github 버튼</string>
     <string name="donate_url">https://www.paypal.com/paypalme/iacobionut01</string>
     <string name="github_url">https://github.com/IacobIonut01/Gallery</string>
-    <string name="settings_cache">Cache</string>
-    <string name="settings_disk_cache_title">Disk cache size</string>
-    <string name="settings_cached_screen_title">Cached screen count</string>
-    <string name="settings_cached_screen_summary">How many screens of media are stored in the memory</string>
-    <string name="settings_disk_cache_summary">How much storage space can be used for persistent caching</string>
+    <string name="settings_cache">캐시</string>
+    <string name="settings_disk_cache_title">디스크 캐시 크기</string>
+    <string name="settings_cached_screen_title">캐시된 화면 수</string>
+    <string name="settings_cached_screen_summary">메모리에 저장된 미디어 화면 수</string>
+    <string name="settings_disk_cache_summary">영구 캐싱에 사용할 수 있는 저장 공간 크기</string>
+    <string name="use_as">다음으로 사용</string>
+    <string name="set_as">"다음으로 설정: "</string>
+    <string name="delete_dialog_title">%s개 항목을 삭제합니다</string>
+    <string name="delete_dialog_title_confirmation">%s개 항목 삭제 중..</string>
+    <string name="action_cancel">취소</string>
+    <string name="action_confirm">확인</string>
+    <string name="action_confirmed">확인됨</string>
+    <string name="restore_dialog_title">%s개 항목을 복원합니다</string>
+    <string name="restore_dialog_title_confirmation">%s개 항목을 복원하는 중...</string>
+    <string name="trash_dialog_title">%s개 항목을 휴지통으로 이동합니다</string>
+    <string name="trash_dialog_title_confirmation">%s개 항목을 휴지통으로 이동 중...</string>
+    <string name="history_delete">항목 삭제</string>
+    <string name="history_recent_title">Recent</string>
+    <string name="history_suggestions_title">Suggestions</string>
+    <string name="no_media_found">미디어를 찾을 수 없습니다</string>
+    <string name="image_add_description">Add a description</string>
+    <string name="edit_cd">edit</string>
+    <string name="edit_location_cd">Edit location</string>
+    <string name="add_location_cd">Add location</string>
+    <string name="settings_theme_header">Theme</string>
+    <string name="settings_follow_system_theme_title">Follow System Theme</string>
+    <string name="settings_dark_mode_title">Use Dark Mode</string>
+    <string name="selection_dialog_close_cd">Close selection dialog</string>
+    <string name="edit">Edit</string>
+    <string name="trash_deletion_warning">Photos and videos you delete will be removed after 30 days.</string>
     <plurals name="item_count">
-        <item quantity="other">%s items</item>
+        <item quantity="other">%s개 항목</item>
     </plurals>
 </resources>
