--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -9,32 +9,32 @@
     <string name="request_permissions">Запрос разрешений</string>
     <string name="filter">Фильтр</string>
     <string name="filter_recent">Недавние</string>
-    <string name="filter_nameAZ">Название (А-Я)</string>
-    <string name="filter_nameZA">Название (Я-А)</string>
+    <string name="filter_nameAZ">Имя (А-Я)</string>
+    <string name="filter_nameZA">Имя (Я-А)</string>
     <string name="filter_old">Старые</string>
-    <string name="selected_s">Выбранные %s</string>
+    <string name="selected_s">Выбрано %s</string>
     <string name="trash">Мусор</string>
-    <string name="pause_video">Пауза</string>
+    <string name="pause_video">Поставить на паузу</string>
     <string name="play_video">Воспроизвести</string>
     <string name="favorites">Любимые</string>
     <string name="no_media_title">Похоже здесь пусто</string>
     <string name="no_media_cd">Медиафайлы отсутствуют</string>
-    <string name="empty_trash_title">Чисто</string>
-    <string name="empty_trash_cd">Мусора нет</string>
+    <string name="empty_trash_title">Чисто как в аптеке</string>
+    <string name="empty_trash_cd">Корзина пуста</string>
     <string name="error_title">Что-то пошло не так :(</string>
-    <string name="error_cd">Вышла ошибка</string>
-    <string name="copy_error">Ошибка при копировании</string>
+    <string name="error_cd">Произошла ошибка</string>
+    <string name="copy_error">Скопировать ошибку</string>
     <string name="trash_restore">Восстановить</string>
     <string name="trash_empty">Пусто</string>
     <string name="trash_delete">Удалить</string>
     <string name="share">Поделиться</string>
     <string name="info">Информация</string>
-    <string name="remove_selected">Удалить выбранные</string>
+    <string name="remove_selected">Удалить выбранное</string>
     <string name="remove_all">Удалить все</string>
     <string name="empty_favorites_title">У вас нет любимых</string>
     <string name="label">Ярлык</string>
     <string name="path">Путь</string>
-    <string name="date">Число</string>
+    <string name="date">Дата</string>
     <string name="iso">" • ISO"</string>
     <string name="kb">КБ</string>
     <string name="mb">МБ</string>
@@ -51,27 +51,52 @@
     <string name="settings_trash_summary">Оставит удаленные медиафайлы в памяти на 30 дней.\nВ случае отключения, медиафайлы будут немедленно удалены навсегда.</string>
     <string name="settings_about_app_title">О галерее</string>
     <string name="settings_about_app_summary">Версия %s</string>
-    <string name="move_album_to_trash">Переместить альбом в мусор</string>
-    <string name="pinned_albums_title">Прикреплённые альбомы</string>
+    <string name="move_album_to_trash">Отправить альбом в корзину</string>
+    <string name="pinned_albums_title">Закрепленные альбомы</string>
     <string name="unpin">Открепить</string>
-    <string name="pin">Прикрепить</string>
-    <string name="nav_timeline">Шкала времени</string>
+    <string name="pin">Закрепить</string>
+    <string name="nav_timeline">Временная шкала</string>
     <string name="location">Местоположение</string>
-    <string name="location_cd">Местоположение медиа файла</string>
+    <string name="location_cd">Местоположение медиафайла</string>
     <string name="location_map_cd">Карта</string>
-    <string name="app_dev">by %s</string>
+    <string name="app_dev">по %s</string>
     <string name="app_dev_name">IacobIonut01</string>
-    <string name="donate">Donate</string>
-    <string name="github">Github</string>
-    <string name="donate_button_cd">Donate Button</string>
-    <string name="github_button_cd">Github Button</string>
+    <string name="donate">Пожертвовать</string>
+    <string name="github">GitHub</string>
+    <string name="donate_button_cd">Кнопка пожертвования</string>
+    <string name="github_button_cd">Кнопка GitHub</string>
     <string name="donate_url">https://www.paypal.com/paypalme/iacobionut01</string>
     <string name="github_url">https://github.com/IacobIonut01/Gallery</string>
-    <string name="settings_cache">Cache</string>
-    <string name="settings_disk_cache_title">Disk cache size</string>
-    <string name="settings_cached_screen_title">Cached screen count</string>
-    <string name="settings_cached_screen_summary">How many screens of media are stored in the memory</string>
-    <string name="settings_disk_cache_summary">How much storage space can be used for persistent caching</string>
+    <string name="settings_cache">Кэш</string>
+    <string name="settings_disk_cache_title">Размер кэша</string>
+    <string name="settings_cached_screen_title">Количество кэшированных экранов</string>
+    <string name="settings_cached_screen_summary">Сколько экранов медиа хранится в памяти</string>
+    <string name="settings_disk_cache_summary">Сколько места в хранилище может быть использовано для постоянного кэширования</string>
+    <string name="use_as">Use as</string>
+    <string name="set_as">"Set as: "</string>
+    <string name="delete_dialog_title">You\'re about to delete %s items</string>
+    <string name="delete_dialog_title_confirmation">Deleting %s items..</string>
+    <string name="action_cancel">Cancel</string>
+    <string name="action_confirm">Confirm</string>
+    <string name="action_confirmed">Confirmed</string>
+    <string name="restore_dialog_title">You\'re about to restore %s items</string>
+    <string name="restore_dialog_title_confirmation">Restoring %s items…</string>
+    <string name="trash_dialog_title">You\'re about to trash %s items</string>
+    <string name="trash_dialog_title_confirmation">Moving to trash %s items…</string>
+    <string name="history_delete">Delete item</string>
+    <string name="history_recent_title">Recent</string>
+    <string name="history_suggestions_title">Suggestions</string>
+    <string name="no_media_found">No media found</string>
+    <string name="image_add_description">Add a description</string>
+    <string name="edit_cd">edit</string>
+    <string name="edit_location_cd">Edit location</string>
+    <string name="add_location_cd">Add location</string>
+    <string name="settings_theme_header">Theme</string>
+    <string name="settings_follow_system_theme_title">Follow System Theme</string>
+    <string name="settings_dark_mode_title">Use Dark Mode</string>
+    <string name="selection_dialog_close_cd">Close selection dialog</string>
+    <string name="edit">Edit</string>
+    <string name="trash_deletion_warning">Photos and videos you delete will be removed after 30 days.</string>
     <plurals name="item_count">
         <item quantity="one">%sпункт</item>
         <item quantity="few">%sпунктов</item>
