--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -12,7 +12,7 @@
     <string name="filter_nameAZ">İsim (A-Z)</string>
     <string name="filter_nameZA">İsim (Z-A)</string>
     <string name="filter_old">Eski</string>
-    <string name="selected_s">Selected %s</string>
+    <string name="selected_s">%s tane öge seçildi</string>
     <string name="trash">Çöp kutusu</string>
     <string name="pause_video">Videoyu durdur</string>
     <string name="play_video">Video oynat</string>
@@ -29,7 +29,7 @@
     <string name="trash_delete">Sil</string>
     <string name="share">Paylaş</string>
     <string name="info">Bilgi</string>
-    <string name="remove_selected">Remove selected</string>
+    <string name="remove_selected">Seçilenleri kaldır</string>
     <string name="remove_all">Tümünü kaldır</string>
     <string name="empty_favorites_title">Hiç favoriniz yok</string>
     <string name="label">Etiket</string>
@@ -42,7 +42,7 @@
     <string name="metadata">Üstveri</string>
     <string name="select_all">Tümünü seç</string>
     <string name="unselect_all">Tümünün seçimini kaldır</string>
-    <string name="drop_down_cd">Drop down</string>
+    <string name="drop_down_cd">Aşağı açılır</string>
     <string name="back_cd">Geri</string>
     <string name="settings_title">Ayarlar</string>
     <string name="reset_settings">Ayarları Sıfırla</string>
@@ -59,19 +59,44 @@
     <string name="location">Konum</string>
     <string name="location_cd">Medya Konumu</string>
     <string name="location_map_cd">Konum Haritası</string>
-    <string name="app_dev">by %s</string>
+    <string name="app_dev">%s tarafından</string>
     <string name="app_dev_name">IacobIonut01</string>
-    <string name="donate">Donate</string>
+    <string name="donate">Bağış Yap</string>
     <string name="github">Github</string>
-    <string name="donate_button_cd">Donate Button</string>
-    <string name="github_button_cd">Github Button</string>
+    <string name="donate_button_cd">Bağış Butonu</string>
+    <string name="github_button_cd">Github Butonu</string>
     <string name="donate_url">https://www.paypal.com/paypalme/iacobionut01</string>
     <string name="github_url">https://github.com/IacobIonut01/Gallery</string>
-    <string name="settings_cache">Cache</string>
-    <string name="settings_disk_cache_title">Disk cache size</string>
-    <string name="settings_cached_screen_title">Cached screen count</string>
+    <string name="settings_cache">Önbellek</string>
+    <string name="settings_disk_cache_title">Disk önbellek boyutu</string>
+    <string name="settings_cached_screen_title">Önbelleğe alınan ekran sayısı</string>
     <string name="settings_cached_screen_summary">How many screens of media are stored in the memory</string>
-    <string name="settings_disk_cache_summary">How much storage space can be used for persistent caching</string>
+    <string name="settings_disk_cache_summary">Kalıcı önbellek için ne kadar depolama alanı kullanılsın</string>
+    <string name="use_as">Use as</string>
+    <string name="set_as">"Set as: "</string>
+    <string name="delete_dialog_title">You\'re about to delete %s items</string>
+    <string name="delete_dialog_title_confirmation">%s öğe siliniyor..</string>
+    <string name="action_cancel">İptal et</string>
+    <string name="action_confirm">Doğrula</string>
+    <string name="action_confirmed">Doğrulandı</string>
+    <string name="restore_dialog_title">%s öğe geri yüklemek üzeresiniz</string>
+    <string name="restore_dialog_title_confirmation">%s öğe geri yükleniyor…</string>
+    <string name="trash_dialog_title">You\'re about to trash %s items</string>
+    <string name="trash_dialog_title_confirmation">Moving to trash %s items…</string>
+    <string name="history_delete">Delete item</string>
+    <string name="history_recent_title">Recent</string>
+    <string name="history_suggestions_title">Suggestions</string>
+    <string name="no_media_found">No media found</string>
+    <string name="image_add_description">Add a description</string>
+    <string name="edit_cd">edit</string>
+    <string name="edit_location_cd">Edit location</string>
+    <string name="add_location_cd">Add location</string>
+    <string name="settings_theme_header">Theme</string>
+    <string name="settings_follow_system_theme_title">Follow System Theme</string>
+    <string name="settings_dark_mode_title">Use Dark Mode</string>
+    <string name="selection_dialog_close_cd">Close selection dialog</string>
+    <string name="edit">Edit</string>
+    <string name="trash_deletion_warning">Photos and videos you delete will be removed after 30 days.</string>
     <plurals name="item_count">
         <item quantity="one">%s öğe</item>
         <item quantity="other">%s öğe</item>
