--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -59,19 +59,44 @@
     <string name="location">位置</string>
     <string name="location_cd">媒體位置</string>
     <string name="location_map_cd">位置地圖</string>
-    <string name="app_dev">by %s</string>
+    <string name="app_dev">由 %s 提供</string>
     <string name="app_dev_name">IacobIonut01</string>
-    <string name="donate">Donate</string>
+    <string name="donate">捐贈</string>
     <string name="github">Github</string>
-    <string name="donate_button_cd">Donate Button</string>
-    <string name="github_button_cd">Github Button</string>
+    <string name="donate_button_cd">捐款鼓勵按鈕</string>
+    <string name="github_button_cd">GitHub 按鈕</string>
     <string name="donate_url">https://www.paypal.com/paypalme/iacobionut01</string>
     <string name="github_url">https://github.com/IacobIonut01/Gallery</string>
-    <string name="settings_cache">Cache</string>
-    <string name="settings_disk_cache_title">Disk cache size</string>
-    <string name="settings_cached_screen_title">Cached screen count</string>
-    <string name="settings_cached_screen_summary">How many screens of media are stored in the memory</string>
-    <string name="settings_disk_cache_summary">How much storage space can be used for persistent caching</string>
+    <string name="settings_cache">快取</string>
+    <string name="settings_disk_cache_title">磁碟快取大小</string>
+    <string name="settings_cached_screen_title">快取畫面數量</string>
+    <string name="settings_cached_screen_summary">儲存在記憶體中的媒體畫面數量</string>
+    <string name="settings_disk_cache_summary">可用於永久快取的儲存空間大小</string>
+    <string name="use_as">Use as</string>
+    <string name="set_as">"Set as: "</string>
+    <string name="delete_dialog_title">You\'re about to delete %s items</string>
+    <string name="delete_dialog_title_confirmation">Deleting %s items..</string>
+    <string name="action_cancel">Cancel</string>
+    <string name="action_confirm">Confirm</string>
+    <string name="action_confirmed">Confirmed</string>
+    <string name="restore_dialog_title">You\'re about to restore %s items</string>
+    <string name="restore_dialog_title_confirmation">Restoring %s items…</string>
+    <string name="trash_dialog_title">You\'re about to trash %s items</string>
+    <string name="trash_dialog_title_confirmation">Moving to trash %s items…</string>
+    <string name="history_delete">Delete item</string>
+    <string name="history_recent_title">Recent</string>
+    <string name="history_suggestions_title">Suggestions</string>
+    <string name="no_media_found">No media found</string>
+    <string name="image_add_description">Add a description</string>
+    <string name="edit_cd">edit</string>
+    <string name="edit_location_cd">Edit location</string>
+    <string name="add_location_cd">Add location</string>
+    <string name="settings_theme_header">Theme</string>
+    <string name="settings_follow_system_theme_title">Follow System Theme</string>
+    <string name="settings_dark_mode_title">Use Dark Mode</string>
+    <string name="selection_dialog_close_cd">Close selection dialog</string>
+    <string name="edit">Edit</string>
+    <string name="trash_deletion_warning">Photos and videos you delete will be removed after 30 days.</string>
     <plurals name="item_count">
         <item quantity="other">%s 個項目</item>
     </plurals>
