--- a/app/src/main/res/values-fi-rFI/strings.xml
+++ b/app/src/main/res/values-fi-rFI/strings.xml
@@ -1,79 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Gallery</string>
-    <string name="nav_albums">Albums</string>
-    <string name="searchbar_title"><![CDATA[Search photos & videos]]></string>
-    <string name="header_today">Today</string>
-    <string name="header_yesterday">Yesterday</string>
-    <string name="share_media">Share</string>
-    <string name="request_permissions">Request permissions</string>
-    <string name="filter">Filter</string>
-    <string name="filter_recent">Recent</string>
-    <string name="filter_nameAZ">Name (A-Z)</string>
-    <string name="filter_nameZA">Name (Z-A)</string>
-    <string name="filter_old">Old</string>
-    <string name="selected_s">Selected %s</string>
-    <string name="trash">Trash</string>
-    <string name="pause_video">Pause video</string>
-    <string name="play_video">Play video</string>
-    <string name="favorites">Favorites</string>
-    <string name="no_media_title">Seems empty here</string>
-    <string name="no_media_cd">No media found</string>
-    <string name="empty_trash_title">Squeaky Clean</string>
-    <string name="empty_trash_cd">Trash is empty</string>
-    <string name="error_title">Something went wrong :(</string>
-    <string name="error_cd">An error occurred</string>
-    <string name="copy_error">Copy error</string>
-    <string name="trash_restore">Restore</string>
-    <string name="trash_empty">Empty</string>
-    <string name="trash_delete">Delete</string>
-    <string name="share">Share</string>
+    <string name="app_name">Galleria</string>
+    <string name="nav_albums">Albumit</string>
+    <string name="searchbar_title"><![CDATA[Etsi valokuvia ja videoita]]></string>
+    <string name="header_today">Tänään</string>
+    <string name="header_yesterday">Eilen</string>
+    <string name="share_media">Jaa</string>
+    <string name="request_permissions">Pyydä lupia</string>
+    <string name="filter">Suodata</string>
+    <string name="filter_recent">Viimeisimmät</string>
+    <string name="filter_nameAZ">Nimi (A-Z)</string>
+    <string name="filter_nameZA">Nimi (Z-A)</string>
+    <string name="filter_old">Vanha</string>
+    <string name="selected_s">Valitut %s</string>
+    <string name="trash">Roskakori</string>
+    <string name="pause_video">Pysäytä video</string>
+    <string name="play_video">Toista video</string>
+    <string name="favorites">Suosikit</string>
+    <string name="no_media_title">Täällä näyttää tyhjältä</string>
+    <string name="no_media_cd">Mediaa ei löytynyt</string>
+    <string name="empty_trash_title">Typötyhjää</string>
+    <string name="empty_trash_cd">Roskakori on tyhjä</string>
+    <string name="error_title">Jokin meni pieleen :(</string>
+    <string name="error_cd">Tapahtui virhe</string>
+    <string name="copy_error">Kopioi virhe</string>
+    <string name="trash_restore">Palauta</string>
+    <string name="trash_empty">Tyhjennä</string>
+    <string name="trash_delete">Poista</string>
+    <string name="share">Jaa</string>
     <string name="info">Info</string>
-    <string name="remove_selected">Remove selected</string>
-    <string name="remove_all">Remove all</string>
-    <string name="empty_favorites_title">You have no favorites</string>
-    <string name="label">Label</string>
-    <string name="path">Path</string>
-    <string name="date">Date</string>
+    <string name="remove_selected">Poista valitut</string>
+    <string name="remove_all">Poista kaikki</string>
+    <string name="empty_favorites_title">Sinulla ei ole suosikkeja</string>
+    <string name="label">Nimike</string>
+    <string name="path">Polku</string>
+    <string name="date">Päivämäärä</string>
     <string name="iso">" • ISO"</string>
-    <string name="kb">KB</string>
-    <string name="mb">MB</string>
-    <string name="gb">GB</string>
-    <string name="metadata">Metadata</string>
-    <string name="select_all">Select all</string>
-    <string name="unselect_all">Unselect all</string>
-    <string name="drop_down_cd">Drop down</string>
-    <string name="back_cd">Back</string>
-    <string name="settings_title">Settings</string>
-    <string name="reset_settings">Reset Settings</string>
-    <string name="settings_general">General</string>
-    <string name="settings_trash_title">Use trash can</string>
-    <string name="settings_trash_summary">Store deleted media for 30 days.\nDeleting media will result in a permanent loss if disabled.</string>
-    <string name="settings_about_app_title">About Gallery</string>
-    <string name="settings_about_app_summary">Version %s</string>
-    <string name="move_album_to_trash">Move album to trash</string>
-    <string name="pinned_albums_title">Pinned Albums</string>
-    <string name="unpin">Unpin</string>
-    <string name="pin">Pin</string>
-    <string name="nav_timeline">Timeline</string>
-    <string name="location">Location</string>
-    <string name="location_cd">Media Location</string>
-    <string name="location_map_cd">Location Map</string>
+    <string name="kb">Kt</string>
+    <string name="mb">Mt</string>
+    <string name="gb">Gt</string>
+    <string name="metadata">Metatiedot</string>
+    <string name="select_all">Valitse kaikki</string>
+    <string name="unselect_all">Poista kaikki valinnat</string>
+    <string name="drop_down_cd">Pudotusvalikko</string>
+    <string name="back_cd">Takaisin</string>
+    <string name="settings_title">Asetukset</string>
+    <string name="reset_settings">Nollaa asetukset</string>
+    <string name="settings_general">Yleinen</string>
+    <string name="settings_trash_title">Käytä roskakoria</string>
+    <string name="settings_trash_summary">Jos käytössä, säilytetään poistettu media 30 päivän ajan.</string>
+    <string name="settings_about_app_title">Tietoa Galleriasta</string>
+    <string name="settings_about_app_summary">Versio %s</string>
+    <string name="move_album_to_trash">Siirrä albumi roskakoriin</string>
+    <string name="pinned_albums_title">Kiinnitetyt albumit</string>
+    <string name="unpin">Poista kiinnitys</string>
+    <string name="pin">Kiinnitä</string>
+    <string name="nav_timeline">Aikajana</string>
+    <string name="location">Sijainti</string>
+    <string name="location_cd">Median sijainti</string>
+    <string name="location_map_cd">Sijaintikartta</string>
     <string name="app_dev">by %s</string>
     <string name="app_dev_name">IacobIonut01</string>
-    <string name="donate">Donate</string>
+    <string name="donate">Lahjoita</string>
     <string name="github">Github</string>
-    <string name="donate_button_cd">Donate Button</string>
-    <string name="github_button_cd">Github Button</string>
+    <string name="donate_button_cd">Lahjoita-painike</string>
+    <string name="github_button_cd">Github-painike</string>
     <string name="donate_url">https://www.paypal.com/paypalme/iacobionut01</string>
     <string name="github_url">https://github.com/IacobIonut01/Gallery</string>
-    <string name="settings_cache">Cache</string>
-    <string name="settings_disk_cache_title">Disk cache size</string>
-    <string name="settings_cached_screen_title">Cached screen count</string>
-    <string name="settings_cached_screen_summary">How many screens of media are stored in the memory</string>
-    <string name="settings_disk_cache_summary">How much storage space can be used for persistent caching</string>
+    <string name="settings_cache">Välimuisti</string>
+    <string name="settings_disk_cache_title">Levyn välimuistin koko</string>
+    <string name="settings_cached_screen_title">Välimuistissa olevien näkymien määrä</string>
+    <string name="settings_cached_screen_summary">Kuinka monta medianäkymää on tallennettu muistiin</string>
+    <string name="settings_disk_cache_summary">Kuinka paljon tallennustilaa voidaan käyttää välimuistitallennukseen</string>
+    <string name="use_as">Use as</string>
+    <string name="set_as">"Set as: "</string>
+    <string name="delete_dialog_title">You\'re about to delete %s items</string>
+    <string name="delete_dialog_title_confirmation">Deleting %s items..</string>
+    <string name="action_cancel">Cancel</string>
+    <string name="action_confirm">Confirm</string>
+    <string name="action_confirmed">Confirmed</string>
+    <string name="restore_dialog_title">You\'re about to restore %s items</string>
+    <string name="restore_dialog_title_confirmation">Restoring %s items…</string>
+    <string name="trash_dialog_title">You\'re about to trash %s items</string>
+    <string name="trash_dialog_title_confirmation">Moving to trash %s items…</string>
+    <string name="history_delete">Delete item</string>
+    <string name="history_recent_title">Recent</string>
+    <string name="history_suggestions_title">Suggestions</string>
+    <string name="no_media_found">No media found</string>
+    <string name="image_add_description">Add a description</string>
+    <string name="edit_cd">edit</string>
+    <string name="edit_location_cd">Edit location</string>
+    <string name="add_location_cd">Add location</string>
+    <string name="settings_theme_header">Theme</string>
+    <string name="settings_follow_system_theme_title">Follow System Theme</string>
+    <string name="settings_dark_mode_title">Use Dark Mode</string>
+    <string name="selection_dialog_close_cd">Close selection dialog</string>
+    <string name="edit">Edit</string>
+    <string name="trash_deletion_warning">Photos and videos you delete will be removed after 30 days.</string>
     <plurals name="item_count">
-        <item quantity="one">%s item</item>
-        <item quantity="other">%s items</item>
+        <item quantity="one">%s kohde</item>
+        <item quantity="other">%s kohdetta</item>
     </plurals>
 </resources>
