--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -6,31 +6,31 @@
     <string name="header_today">Oggi</string>
     <string name="header_yesterday">Ieri</string>
     <string name="share_media">Condividi</string>
-    <string name="request_permissions">Request permissions</string>
+    <string name="request_permissions">Richiedi autorizzazioni</string>
     <string name="filter">Filter</string>
-    <string name="filter_recent">Recent</string>
+    <string name="filter_recent">Data più recente</string>
     <string name="filter_nameAZ">Nome (A-Z)</string>
     <string name="filter_nameZA">Nome (Z-A)</string>
-    <string name="filter_old">Old</string>
-    <string name="selected_s">Selected %s</string>
+    <string name="filter_old">Data meno recente</string>
+    <string name="selected_s">Selezionati %s</string>
     <string name="trash">Cestino</string>
-    <string name="pause_video">Pause video</string>
-    <string name="play_video">Play video</string>
+    <string name="pause_video">Pausa</string>
+    <string name="play_video">Riproduci</string>
     <string name="favorites">Preferiti</string>
-    <string name="no_media_title">Seems empty here</string>
-    <string name="no_media_cd">No media found</string>
-    <string name="empty_trash_title">Squeaky Clean</string>
+    <string name="no_media_title">Sembra vuoto qui</string>
+    <string name="no_media_cd">Nessun contenuto multimediale trovato</string>
+    <string name="empty_trash_title">Lindo e pinto</string>
     <string name="empty_trash_cd">Il cestino è vuoto</string>
     <string name="error_title">Qualcosa è andato storto :(</string>
     <string name="error_cd">Si è verificato un errore</string>
     <string name="copy_error">Copy error</string>
     <string name="trash_restore">Ripristina</string>
-    <string name="trash_empty">Vuoto</string>
+    <string name="trash_empty">Svuota</string>
     <string name="trash_delete">Elimina</string>
     <string name="share">Condividi</string>
     <string name="info">Informazioni</string>
-    <string name="remove_selected">Remove selected</string>
-    <string name="remove_all">Remove all</string>
+    <string name="remove_selected">Rimuovi selezionati</string>
+    <string name="remove_all">Rimuovi tutto</string>
     <string name="empty_favorites_title">Non hai preferiti</string>
     <string name="label">Etichetta</string>
     <string name="path">Percorso</string>
@@ -43,37 +43,62 @@
     <string name="select_all">Seleziona tutto</string>
     <string name="unselect_all">Deseleziona tutto</string>
     <string name="drop_down_cd">Drop down</string>
-    <string name="back_cd">Back</string>
+    <string name="back_cd">Indietro</string>
     <string name="settings_title">Impostazioni</string>
     <string name="reset_settings">Ripristina impostazioni</string>
     <string name="settings_general">Generali</string>
     <string name="settings_trash_title">Utilizza il cestino</string>
-    <string name="settings_trash_summary">Store deleted media for 30 days.\nDeleting media will result in a permanent loss if disabled.</string>
+    <string name="settings_trash_summary">Conserva i contenuti multimediali eliminati per 30 giorni.\nSe disattivato, l\'eliminazione dei contenuti sarà definitiva.</string>
     <string name="settings_about_app_title">Informazioni su Galleria</string>
     <string name="settings_about_app_summary">Versione %s</string>
     <string name="move_album_to_trash">Sposta l\'album nel cestino</string>
-    <string name="pinned_albums_title">Pinned Albums</string>
-    <string name="unpin">Unpin</string>
-    <string name="pin">Pin</string>
-    <string name="nav_timeline">Timeline</string>
-    <string name="location">Location</string>
+    <string name="pinned_albums_title">Album fissati in alto</string>
+    <string name="unpin">Sblocca dall\'alto</string>
+    <string name="pin">Fissa in alto</string>
+    <string name="nav_timeline">Cronologia</string>
+    <string name="location">Posizione</string>
     <string name="location_cd">Media Location</string>
     <string name="location_map_cd">Location Map</string>
-    <string name="app_dev">by %s</string>
+    <string name="app_dev">di %s</string>
     <string name="app_dev_name">IacobIonut01</string>
-    <string name="donate">Donate</string>
+    <string name="donate">Dona</string>
     <string name="github">Github</string>
-    <string name="donate_button_cd">Donate Button</string>
-    <string name="github_button_cd">Github Button</string>
+    <string name="donate_button_cd">Pulsante di donazione</string>
+    <string name="github_button_cd">Pulsante di Github</string>
     <string name="donate_url">https://www.paypal.com/paypalme/iacobionut01</string>
     <string name="github_url">https://github.com/IacobIonut01/Gallery</string>
     <string name="settings_cache">Cache</string>
-    <string name="settings_disk_cache_title">Disk cache size</string>
+    <string name="settings_disk_cache_title">Dimensione della cache</string>
     <string name="settings_cached_screen_title">Cached screen count</string>
     <string name="settings_cached_screen_summary">How many screens of media are stored in the memory</string>
-    <string name="settings_disk_cache_summary">How much storage space can be used for persistent caching</string>
+    <string name="settings_disk_cache_summary">Quanto spazio di memoria può essere utilizzato per la cache persistente</string>
+    <string name="use_as">Usa come</string>
+    <string name="set_as">"Imposta come: "</string>
+    <string name="delete_dialog_title">Stai per eliminare %s elementi</string>
+    <string name="delete_dialog_title_confirmation">Eliminazione di % elementi in corso…</string>
+    <string name="action_cancel">Annulla</string>
+    <string name="action_confirm">Conferma</string>
+    <string name="action_confirmed">Confirmed</string>
+    <string name="restore_dialog_title">Stai per ripristinare %s elementi</string>
+    <string name="restore_dialog_title_confirmation">Ripristino di %s elementi in corso…</string>
+    <string name="trash_dialog_title">Stai per spostare %s elementi nel cestino</string>
+    <string name="trash_dialog_title_confirmation">Spostamento di %s elementi nel cestino in corso…</string>
+    <string name="history_delete">Elimina elemento</string>
+    <string name="history_recent_title">Recent</string>
+    <string name="history_suggestions_title">Suggerimenti</string>
+    <string name="no_media_found">Nessun contenuto multimediale trovato</string>
+    <string name="image_add_description">Aggiungi una descrizione</string>
+    <string name="edit_cd">modifica</string>
+    <string name="edit_location_cd">Modifica posizione</string>
+    <string name="add_location_cd">Aggiungi posizione</string>
+    <string name="settings_theme_header">Tema</string>
+    <string name="settings_follow_system_theme_title">Predefinito di sistema</string>
+    <string name="settings_dark_mode_title">Scuro</string>
+    <string name="selection_dialog_close_cd">Close selection dialog</string>
+    <string name="edit">Modifica</string>
+    <string name="trash_deletion_warning">Le foto e i video eliminati saranno rimossi dopo 30 giorni.</string>
     <plurals name="item_count">
-        <item quantity="one">%s item</item>
-        <item quantity="other">%s items</item>
+        <item quantity="one">%s elemento</item>
+        <item quantity="other">%s elementi</item>
     </plurals>
 </resources>
