--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -51,29 +51,54 @@
     <string name="settings_trash_summary">Armazenar midias apagadas durante 30 dias.\nExcluir mídia resultará em perda permanente se desativado.</string>
     <string name="settings_about_app_title">Sobre a Galeria</string>
     <string name="settings_about_app_summary">Versão %s</string>
-    <string name="move_album_to_trash">Move album to trash</string>
-    <string name="pinned_albums_title">Pinned Albums</string>
-    <string name="unpin">Unpin</string>
-    <string name="pin">Pin</string>
-    <string name="nav_timeline">Timeline</string>
-    <string name="location">Location</string>
-    <string name="location_cd">Media Location</string>
-    <string name="location_map_cd">Location Map</string>
-    <string name="app_dev">by %s</string>
+    <string name="move_album_to_trash">Mover o álbum para a lixeira</string>
+    <string name="pinned_albums_title">Álbuns fixados</string>
+    <string name="unpin">Desfixar</string>
+    <string name="pin">Fixar</string>
+    <string name="nav_timeline">Linha do tempo</string>
+    <string name="location">Localização</string>
+    <string name="location_cd">Localização da mídia</string>
+    <string name="location_map_cd">Mapa de localização</string>
+    <string name="app_dev">por %s</string>
     <string name="app_dev_name">IacobIonut01</string>
-    <string name="donate">Donate</string>
+    <string name="donate">Doar</string>
     <string name="github">Github</string>
-    <string name="donate_button_cd">Donate Button</string>
-    <string name="github_button_cd">Github Button</string>
+    <string name="donate_button_cd">Botão doar</string>
+    <string name="github_button_cd">Botão github</string>
     <string name="donate_url">https://www.paypal.com/paypalme/iacobionut01</string>
     <string name="github_url">https://github.com/IacobIonut01/Gallery</string>
     <string name="settings_cache">Cache</string>
-    <string name="settings_disk_cache_title">Disk cache size</string>
-    <string name="settings_cached_screen_title">Cached screen count</string>
-    <string name="settings_cached_screen_summary">How many screens of media are stored in the memory</string>
-    <string name="settings_disk_cache_summary">How much storage space can be used for persistent caching</string>
+    <string name="settings_disk_cache_title">Tamanho do cache do disco</string>
+    <string name="settings_cached_screen_title">Contagem de tela em cache</string>
+    <string name="settings_cached_screen_summary">Quantas telas de mídia estão armazenadas na memória</string>
+    <string name="settings_disk_cache_summary">Quanto espaço de armazenamento pode ser usado para cache persistente</string>
+    <string name="use_as">Use as</string>
+    <string name="set_as">"Set as: "</string>
+    <string name="delete_dialog_title">You\'re about to delete %s items</string>
+    <string name="delete_dialog_title_confirmation">Deleting %s items..</string>
+    <string name="action_cancel">Cancel</string>
+    <string name="action_confirm">Confirm</string>
+    <string name="action_confirmed">Confirmed</string>
+    <string name="restore_dialog_title">You\'re about to restore %s items</string>
+    <string name="restore_dialog_title_confirmation">Restoring %s items…</string>
+    <string name="trash_dialog_title">You\'re about to trash %s items</string>
+    <string name="trash_dialog_title_confirmation">Moving to trash %s items…</string>
+    <string name="history_delete">Delete item</string>
+    <string name="history_recent_title">Recent</string>
+    <string name="history_suggestions_title">Suggestions</string>
+    <string name="no_media_found">No media found</string>
+    <string name="image_add_description">Add a description</string>
+    <string name="edit_cd">edit</string>
+    <string name="edit_location_cd">Edit location</string>
+    <string name="add_location_cd">Add location</string>
+    <string name="settings_theme_header">Theme</string>
+    <string name="settings_follow_system_theme_title">Follow System Theme</string>
+    <string name="settings_dark_mode_title">Use Dark Mode</string>
+    <string name="selection_dialog_close_cd">Close selection dialog</string>
+    <string name="edit">Edit</string>
+    <string name="trash_deletion_warning">Photos and videos you delete will be removed after 30 days.</string>
     <plurals name="item_count">
-        <item quantity="one">%s item</item>
-        <item quantity="other">%s items</item>
+        <item quantity="one">%s ítem</item>
+        <item quantity="other">%s ítens</item>
     </plurals>
 </resources>
