Gallery: Add open with option for videos
Partially fullfills the issue #11. By default the user will be able to scroll through all of the media, and for any video he wants to open externally, can be done so using the "Open with" button (same as "Use as" for images). Video autoplay is not enabled so the user can specifically open any video he wants externally without having to first pause the current playback

Signed-off-by: IacobIonut01 <paulionut2003@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,6 +97,7 @@
     <string name="selection_dialog_close_cd">Close selection dialog</string>
     <string name="edit">Edit</string>
     <string name="trash_deletion_warning">Photos and videos you delete will be removed after 30 days.</string>
+    <string name="open_with">"Open with: "</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
